package entity.language;

public interface SyllableCalculatorInterface
{
    int calculate(String word);
}
